--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 <meta property="og:site_name" content="Clan Onda" />
 <meta property="og:image" content="/jekyll-theme-memoirs/assets/images/screenshot.jpg" />
 <script type="application/ld+json">
-{"headline":"Memoirs, a free minimalist Jekyll blogging theme with modern design","image":"/jekyll-theme-memoirs/assets/images/screenshot.jpg","url":"/jekyll-theme-memoirs/about","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"/jekyll-theme-memoirs/assets/images/logo.png"}},"description":"Sei pronto per la sfida di comunicazione del challenge 2020?!","@type":"WebPage","@context":"https://schema.org"}</script>
+{"url":"/jekyll-theme-memoirs/about","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"/jekyll-theme-memoirs/assets/images/logo.png"}},"headline":"Memoirs, a free minimalist Jekyll blogging theme with modern design","description":"Sei pronto per la sfida di comunicazione del challenge 2020?!","@type":"WebPage","image":"/jekyll-theme-memoirs/assets/images/screenshot.jpg","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     
