--- a/page2/index.html
+++ b/page2/index.html
@@ -19,7 +19,7 @@
 <link rel="prev" href="/jekyll-theme-memoirs/" />
 <link rel="next" href="/jekyll-theme-memoirs/page3/" />
 <script type="application/ld+json">
-{"headline":"Home","url":"/jekyll-theme-memoirs/page2/","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"/jekyll-theme-memoirs/assets/images/logo.png"}},"description":"Sei pronto per la sfida di comunicazione del challenge 2020?!","@type":"WebPage","@context":"https://schema.org"}</script>
+{"url":"/jekyll-theme-memoirs/page2/","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"/jekyll-theme-memoirs/assets/images/logo.png"}},"headline":"Home","description":"Sei pronto per la sfida di comunicazione del challenge 2020?!","@type":"WebPage","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     
