--- a/tags.html
+++ b/tags.html
@@ -17,7 +17,7 @@
 <meta property="og:description" content="Sei pronto per la sfida di comunicazione del challenge 2020?!" />
 <meta property="og:site_name" content="Clan Onda" />
 <script type="application/ld+json">
-{"headline":"Tags","url":"/jekyll-theme-memoirs/tags","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"/jekyll-theme-memoirs/assets/images/logo.png"}},"description":"Sei pronto per la sfida di comunicazione del challenge 2020?!","@type":"WebPage","@context":"https://schema.org"}</script>
+{"url":"/jekyll-theme-memoirs/tags","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"/jekyll-theme-memoirs/assets/images/logo.png"}},"headline":"Tags","description":"Sei pronto per la sfida di comunicazione del challenge 2020?!","@type":"WebPage","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     
