--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <meta property="og:site_name" content="Clan Onda" />
 <link rel="next" href="/jekyll-theme-memoirs/page2/" />
 <script type="application/ld+json">
-{"headline":"Home","url":"/jekyll-theme-memoirs/","name":"Clan Onda","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"/jekyll-theme-memoirs/assets/images/logo.png"}},"description":"Sei pronto per la sfida di comunicazione del challenge 2020?!","@type":"WebSite","@context":"https://schema.org"}</script>
+{"url":"/jekyll-theme-memoirs/","name":"Clan Onda","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"/jekyll-theme-memoirs/assets/images/logo.png"}},"headline":"Home","description":"Sei pronto per la sfida di comunicazione del challenge 2020?!","@type":"WebSite","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     
