--- a/page3/index.html
+++ b/page3/index.html
@@ -18,7 +18,7 @@
 <meta property="og:site_name" content="Clan Onda" />
 <link rel="prev" href="/jekyll-theme-memoirs/page2/" />
 <script type="application/ld+json">
-{"headline":"Home","url":"/jekyll-theme-memoirs/page3/","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"/jekyll-theme-memoirs/assets/images/logo.png"}},"description":"Sei pronto per la sfida di comunicazione del challenge 2020?!","@type":"WebPage","@context":"https://schema.org"}</script>
+{"url":"/jekyll-theme-memoirs/page3/","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"/jekyll-theme-memoirs/assets/images/logo.png"}},"headline":"Home","description":"Sei pronto per la sfida di comunicazione del challenge 2020?!","@type":"WebPage","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     
