--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
           Caro diario, oggi è iniziata ufficialmente la sfida di comunicazione ed è fantastica! In realtà, non tutti hanno ancora partecipato, ma non vedo l&rsquo;ora di vedere altri post. Quelli pubblicati finora sono strafighi. Dovresti proprio vedere che begli esempi di comunicazione che hanno cacciato. E domani ci sarà ancora più COMUNICAZIONE. Tenete sotto controllo il profilo tiktok!
 Lascio qui un link a tutti i profili:
-  Profilo di clan: https://www.
+  Profilo di clan
         </div>
           <a href="http://clanonda.github.io/posts/sfida-di-comunicazione/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">Leggi di più</a>
         
